tests/duarouter/function/skip_routing/invalid/gaps_ignore/errors.duarouter
Warning: Edge 'left' not connected to edge 'end' for vehicle 'left_gap'.
Warning: Edge 'middle' not connected to edge 'rend' for vehicle 'middle_gap'.
